# lab

./: .gitignore  README.md  pyproject.toml
asyncio/: 01_why_async.py  02_event_loop_and_tasks.py  03_http_requests.py  04_database_queries.py  05_file_io.py  06_producer_consumer.py  07_timeout_and_retry.py  08_websocket.py  README.md
dagster/: .gitignore  README.md  definitions.py  knowledge_sharing.md  pyproject.toml
dagster/data/raw/: customers.csv  sales_2024_q1.csv  sales_2024_q2.csv
dagster/jobs/: sales.py  sales_dbt.py  weather.py
dagster/resources/: dbt.py  open_meteo.py
dagster/sales/: assets.py  checks.py  dbt_assets.py  models.py
dagster/tests/: test_sales_assets.py  test_weather_assets.py
dagster/transform/: .user.yml  dbt_project.yml  profiles.yml
dagster/transform/models/marts/: sales_by_month.sql  schema.yml
dagster/transform/models/staging/: schema.yml  stg_customers.sql  stg_sales.sql
dagster/weather/: assets.py  checks.py  models.py
