[project]
name = "lab"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "dagster>=1.12.19",
    "dagster-dbt>=0.28.19",
    "dagster-webserver>=1.12.19",
    "dbt-duckdb>=1.10.1",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.dagster]
module_name = "dagster.definitions"
